Name:		MSSMPlot
Version:	0.0
Synopsis:	Plotting MSSM Spectrum 
Description: 	Plotting MSSM Spectrum 
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, HROOT >= 0.4.3.1 , MSSMType >= 0.0.1.0
  Exposed-Modules: 
                   HEP.Physics.MSSM.Spectrum.Plot
 
		 
